# fia-auth

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: build-and-push.yml  build_and_push.yml  codeql.yml  dependency-review.yml  formatting-and-linting.yml  formatting.yml  image-scan.yml  linting.yml  scorecards.yml  tests.yml
container/: fia-auth.Dockerfile
fia_auth/: app.py  auth.py  db.py  exception_handlers.py  exceptions.py  experiments.py  fia_auth.py  model.py  roles.py  routers.py  tokens.py
src/: app.py  auth.py  db.py  exception_handlers.py  exceptions.py  experiments.py  model.py  routers.py  tokens.py
test/: test_auth.py  test_model.py  test_roles.py  test_tokens.py
test/e2e/: conftest.py  test_auth.py  test_db.py  test_experiments.py  test_maintenance.py
