[project]
name = "fia-auth"
description = "Python microservice providing user authentication"
readme = "README.md"
version = "0.0.1"

dependencies = [
    "cryptography==42.0.7",
    "gql[all]==3.5.0",
    "fastapi[all]==0.111.0",
    "PyJWT==2.8.0",
    "uvicorn==0.30.1"
]

[project.urls]
"Repository" = "https://github.com/fiaisis/fia-auth"

[project.optional-dependencies]
code-inspection = [
    "pylint==3.2.2",
    "mypy==1.10.0"
]

formatting = [
    "black==24.4.2"
]

test = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1",
]



[tool.setuptools]
packages = ["src"]